--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express.js": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
